[gd_scene load_steps=9 format=3 uid="uid://cegjlefmdss8"]

[ext_resource type="Script" path="res://UI/PauseUI/PauseUI.gd" id="1_40tjw"]
[ext_resource type="FontFile" uid="uid://bo46ww57g35wi" path="res://Font/PIXBOB LITE.ttf" id="1_jwu67"]
[ext_resource type="PackedScene" uid="uid://ci7mkc6q2toh5" path="res://UI/BackgroundforUI/BackgroundforUI.tscn" id="2_6b46i"]
[ext_resource type="PackedScene" uid="uid://bv3m05gqpshp8" path="res://UI/SettingsUI/MusicSettingsUI.tscn" id="2_ws1ov"]
[ext_resource type="Script" path="res://UI/BlinkingText.gd" id="3_7i85e"]
[ext_resource type="PackedScene" uid="uid://b17441rik8xi8" path="res://UI/MainMenuUI/SilverButton/SilverButton.tscn" id="5_sxdaf"]

[sub_resource type="LabelSettings" id="LabelSettings_ocmqh"]
font = ExtResource("1_jwu67")
font_size = 31
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d71bm"]
font = ExtResource("1_jwu67")
font_size = 19
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="PauseUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40tjw")

[node name="BackgroundforUI" parent="." instance=ExtResource("2_6b46i")]
layout_mode = 0
offset_left = 238.0
offset_top = 95.0
offset_right = 406.0
offset_bottom = 309.0

[node name="MusicSettingsUI" parent="." instance=ExtResource("2_ws1ov")]
layout_mode = 1

[node name="MusicSlider" parent="MusicSettingsUI" index="0"]
offset_left = -58.0
offset_top = -42.0
offset_right = 66.0
offset_bottom = -26.0

[node name="SfxSlider" parent="MusicSettingsUI" index="1"]
offset_left = -58.0
offset_top = 13.0
offset_right = 66.0
offset_bottom = 29.0

[node name="PauseLabel" type="Label" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -148.0
offset_right = 38.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_ocmqh")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_7i85e")

[node name="BlinkTimer" type="Timer" parent="PauseLabel"]
process_mode = 3
wait_time = 0.6
autostart = true

[node name="EscLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -112.5
offset_right = 74.5
offset_bottom = -89.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS ESC TO CONTINUE"
label_settings = SubResource("LabelSettings_d71bm")
script = ExtResource("3_7i85e")

[node name="BlinkTimer" type="Timer" parent="EscLabel"]
process_mode = 3
wait_time = 0.6
autostart = true

[node name="RestartBtn" parent="." instance=ExtResource("5_sxdaf")]
layout_mode = 1
offset_top = 41.0
offset_bottom = 71.0

[node name="Label" parent="RestartBtn" index="0"]
text = "restart"

[node name="MainMenuBtn" parent="." instance=ExtResource("5_sxdaf")]
layout_mode = 1
offset_top = 81.0
offset_bottom = 111.0

[node name="Label" parent="MainMenuBtn" index="0"]
text = "menu"

[connection signal="timeout" from="PauseLabel/BlinkTimer" to="PauseLabel" method="_on_blink_timer_timeout"]
[connection signal="timeout" from="EscLabel/BlinkTimer" to="EscLabel" method="_on_blink_timer_timeout"]
[connection signal="pressed" from="RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]

[editable path="MusicSettingsUI"]
[editable path="RestartBtn"]
[editable path="MainMenuBtn"]
